--- a/2.Android and Model-View-Controller/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
+++ b/2.Android and Model-View-Controller/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/question_text_view"
@@ -46,4 +44,4 @@
         android:contentDescription="@string/next_button"
         android:src="@drawable/arrow_right"/>
 
-</FrameLayout>
+</merge>
