--- a/2.Android and Model-View-Controller/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
+++ b/2.Android and Model-View-Controller/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:tools="http://schemas.android.com/tools"
+       xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/question_text_view"
@@ -18,13 +19,15 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button"/>
+            android:text="@string/true_button"
+            tools:ignore="ButtonStyle"/>
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button"/>
+            android:text="@string/false_button"
+            tools:ignore="ButtonStyle"/>
 
     </LinearLayout>
 
@@ -34,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:contentDescription="@string/prev_button"
-        android:src="@drawable/arrow_left"/>
+        android:src="@drawable/arrow_left"
+        tools:ignore="RtlHardcoded"/>
 
     <ImageButton
         android:id="@+id/next_button"
@@ -42,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:contentDescription="@string/next_button"
-        android:src="@drawable/arrow_right"/>
+        android:src="@drawable/arrow_right"
+        tools:ignore="RtlHardcoded"/>
 
 </merge>
